# question_answering

./: .gitignore  LICENSE  Makefile  README.md  app.py  entrypoint.ipynb  pyproject.toml
notebooks/: data_preprocessing.ipynb  eda.ipynb  extractive_qa.ipynb  metrics.ipynb  retrieval_eval.ipynb  sentence_transformers_encoder.ipynb  tf_idf_encoder.ipynb
scripts/: extractive_qa_streamlit.py  index_documents.py
src/clients/: __init__.py  base.py  chroma_database.py  in_memory_database.py
src/data/: data_models.py
src/data/datasets/: __init__.py  base.py  squad_v2.py
src/encoders/: __init__.py  base.py  random.py  sentence_transformers.py  tf_idf.py
src/entities/: __init__.py  answer.py  document.py  retrieval_result.py
src/indexer/: __init__.py  base.py  database_indexer.py
src/metrics/: __init__.py  rank.py
src/pipelines/: __init__.py  base.py  extractive_qa.py
src/processors/: __init__.py
src/processors/text/: __init__.py  base.py  text_processor.py
src/readers/: __init__.py  base.py  reader.py
src/repositories/: __init__.py  documents_repository.py
src/retriever/: __init__.py  base.py  random.py  vector_search.py
src/utils/: hash.py
